# WalkerEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WalkerEngine.sln
Sandbox/: .gitignore  CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters  SandboxApp.cpp  SandboxLayer.cpp  SandboxLayer.h  imgui.ini
Sandbox/Shaders/: box_blur.frag  depth_of_field.frag  depth_shader_cube.frag  g_buffer.vert  g_buffer_pbr.frag  geometry_shader.geom  pbr_deferred.frag  skybox.vert  test.comp  test.frag
Shared/Shaders/: basic_lighting.frag  bloom_upsample.comp  bloomprefilter.comp  deferred_shading.frag  depth_shader.frag  depth_shader_cascades.geom  depth_shader_cascades.vert  depth_shader_cube.frag  depth_shader_cube.vert  g_buffer.vert  gaussian_blur_vertical.comp  gaussian_downsample_horizontal.comp  pbr_deferred.frag  raymarch.vert  test.comp  test.frag  tonemap.comp  volume_test.comp  voxel_buffer_to_texture.comp  voxel_visualization.frag  voxel_visualization.vert  voxelize.frag  voxelize.geom  voxelize.vert
Shared/VulkanShaders/: shader.frag  testinclude.glsl
WalkerEditor/: .gitignore  CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  WalkerEditor.cpp  WalkerEditor.vcxproj  WalkerEditor.vcxproj.filters  imgui.ini
WalkerEditor/Panels/: MaterialPanel.cpp  MaterialPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
WalkerEditor/Scenes/: Example.walker
WalkerEditor/Shaders/: box_blur.frag  debug_quad_input.frag  depth_of_field.frag  editor.frag  editor.vert  g_buffer.frag  g_buffer.vert  g_buffer_pbr.frag  outline.frag  outline.geom  outline.vert  pbr_deferred.frag  raymarch.frag  ssao_blur_pass.frag  test.comp
WalkerEngine/: CMakeLists.txt  WalkerEngine.vcxproj  WalkerEngine.vcxproj.filters  cpp.hint
WalkerEngine/Shaders/: light_cube.vert
WalkerEngine/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Core.h  Cube.h  DirectionalLight.cpp  DirectionalLight.h  EntryPoint.h  GBuffer.cpp  GBuffer.h  GBufferPBR.cpp  GBufferPBR.h  ImGuiManager.cpp  ImGuiManager.h  Input.h  KeyCodes.h  Log.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelNode.cpp  ModelNode.h  PointLight.cpp  PointLight.h  Quad.cpp  Quad.h  SSAOBlurPass.cpp  SSAOBlurPass.h  SSAOPass.cpp  SSAOPass.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Transform.cpp  Transform.h  Volume.cpp  Volume.h  (+7 more)
WalkerEngine/src/Core/: Application.cpp  Application.h  EntryPoint.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  MouseCodes.h  UUID.cpp  UUID.h
WalkerEngine/src/Events/: Event.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
WalkerEngine/src/Math/: Transform.cpp
WalkerEngine/src/Math/SampleGeometry/: Quad.cpp  Quad.h
WalkerEngine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLComputeShader.cpp  OpenGLComputeShader.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderStorageBuffer.cpp  OpenGLShaderStorageBuffer.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLTexture3D.cpp  OpenGLTexture3D.h  OpenGLTextureCubemap.cpp  OpenGLTextureCubemap.h  OpenGLTextureUtils.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLUtils.cpp  OpenGLUtils.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
WalkerEngine/src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanBufferUtils.cpp  VulkanBufferUtils.h  VulkanContext.cpp  VulkanContext.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImageUtils.cpp  VulkanImageUtils.h  VulkanPhysicalDeviceUtils.cpp  VulkanPhysicalDeviceUtils.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture2D.cpp  VulkanTexture2D.h
WalkerEngine/src/Platform/Windows/: WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
WalkerEngine/src/Renderer/: Buffer.cpp  Buffer.h  ComputeShader.cpp  ComputeShader.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  Material.cpp  Material.h  RenderCommand.cpp  RenderCommand.h  RenderGraph.cpp  RenderGraph.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
WalkerEngine/src/Renderer/RenderPasses/: BloomComputePass.cpp  BloomComputePass.h  BoxBlurPass.cpp  BoxBlurPass.h  DeferredPBRLightingPass.cpp  DeferredPBRLightingPass.h  DepthOfFieldPass.cpp  DepthOfFieldPass.h  EditorPass.cpp  EditorPass.h  GBuffer.h  GBufferPBRPass.cpp  GBufferPBRPass.h  SSAOBlurPass.h  SSAOPass.cpp  SSAOPass.h  ShadowMapPass.cpp  ShadowMapPass.h  TonemapComputePass.cpp  TonemapComputePass.h  VoxelVisualizationPass.cpp  VoxelVisualizationPass.h  VoxelizationPass.cpp  VoxelizationPass.h
WalkerEngine/src/Scene/: Camera.cpp  Camera.h  Components.h  DirectionalLight.cpp  DirectionalLight.h  Entity.cpp  Entity.h  GIProbe.h  GIProbeComponent.h  IDComponent.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelNode.cpp  ModelNode.h  PointLight.cpp  PointLight.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  Skybox.cpp  Skybox.h  Volume.cpp  Volume.h
WalkerEngine/src/Utils/: PlatformUtils.h
include/glad/: glad.h
src/WalkerEngine/: Camera.h  Cube.h  DirectionalLight.cpp  DirectionalLight.h  GBuffer.cpp  GBuffer.h  ImGuiManager.cpp  ImGuiManager.h  Mesh.h  Model.cpp  Model.h  ModelNode.cpp  ModelNode.h  PointLight.cpp  PointLight.h  SSAOBlurPass.cpp  SSAOBlurPass.h  SSAOPass.cpp  SSAOPass.h  Shader.cpp  Shader.h  Skybox.cpp  Transform.cpp  Transform.h  Volume.h  WalkerEngine.vcxproj  WalkerEngine.vcxproj.filters  glad.c  imgui.ini  main.cpp
src/WalkerEngine/Shaders/: basic_lighting.frag  basic_lighting.vert  deferred_shading.frag  depth_shader_cube.frag  depth_shader_cube.vert  g_buffer.frag  g_buffer.vert  g_buffer_pbr.frag  pbr_deferred.frag  ssao_pass.frag
